# icebug

./: .gitmodules  AGENTS.md  CMakeLists.txt  README.md  neighbor_range.md  pyproject.toml  test_neighbor_range.cpp  vcpkg.json  version.py
.github/workflows/: build_wheels.yml  ci-matrix.yml  ci.yml
.github/workflows/scripts/: cpp_only.sh
cmake/: ArrowConfig.cmake
docs/: ICEBUG_DESIGN.md
docs/agent/: dependencies.md  structure.md  workflow.md
extrafiles/tooling/: CppClangFormat.py
icebug.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
include/networkit/coarsening/: CoarsenedGraphView.hpp
include/networkit/community/: ParallelLeidenView.hpp
include/networkit/graph/: Attributes.hpp  Graph.hpp  GraphR.hpp  GraphTools.hpp  GraphW.hpp
networkit/: __init__.py  algebraic.py  centrality.pyx  clique.pyx  coarsening.pyx  community.pyx  components.pyx  correlation.pyx  distance.pyx  dynamics.pyx  embedding.pyx  flow.pyx  generators.pyx  globals.pyx  graph.pxd  graph.pyx  graphio.pyx  graphtools.pyx  helpers.pyx  independentset.pyx  linkprediction.pyx  matching.pyx  randomization.pyx  reachability.pyx  scd.pyx  simulation.pyx  sparsification.pyx  traversal.pyx  viz.pyx
networkit/cpp/coarsening/: CMakeLists.txt  CoarsenedGraphView.cpp  GraphCoarsening.cpp  ParallelPartitionCoarseningView.cpp
networkit/cpp/coarsening/test/: CoarseningBenchmark.cpp  CoarseningGTest.cpp
networkit/test/: test_algebraic.py  test_arrow_pagerank.py  test_distance.py  test_graphtools.py  test_leiden_validation.py  test_parallel_leiden.py  test_randomization.py
(+99 files in other folders)
